--- a/stable_diffusion.ipynb
+++ b/stable_diffusion.ipynb
@@ -365,6 +365,43 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')"
+      ],
+      "metadata": {
+        "id": "0MsV2jANxClF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "ROOT = '/content/drive/MyDrive/Midfluencer'\n",
+        "INPUT = os.path.join(ROOT, \"images\")\n",
+        "OUTPUT = os.path.join(ROOT, \"output\")"
+      ],
+      "metadata": {
+        "id": "WOFG_NpjxE6Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MODEL = \"stabilityai/stable-diffusion-2-1\""
+      ],
+      "metadata": {
+        "id": "QH_ARZznxG9h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install -U autotrain-advanced"
       ],
       "metadata": {
@@ -374,7 +411,7 @@
         "id": "yI9nJnKN1a7d",
         "outputId": "aa79b542-b30b-4ad5-c793-c07711bd65a8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +588,7 @@
         "id": "b_rpj1WDIIo6",
         "outputId": "b38db5f5-84b4-45c2-dce0-0050977b3bff"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,44 +598,6 @@
             "> \u001b[1mINFO    Successfully installed latest xformers\u001b[0m\n",
             "> \u001b[1mINFO    Installing latest PyTorch\u001b[0m\n",
             "> \u001b[1mINFO    Successfully installed latest PyTorch\u001b[0m\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install xformers"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_GLHDNE4MpQG",
-        "outputId": "d68d67e6-a225-45ba-c369-e7279dbfab5d"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting xformers\n",
-            "  Downloading xformers-0.0.22.post7-cp310-cp310-manylinux2014_x86_64.whl (211.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.8/211.8 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from xformers) (1.23.5)\n",
-            "Requirement already satisfied: torch==2.1.0 in /usr/local/lib/python3.10/dist-packages (from xformers) (2.1.0+cu118)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch==2.1.0->xformers) (3.13.1)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from torch==2.1.0->xformers) (4.8.0)\n",
-            "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch==2.1.0->xformers) (1.12)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch==2.1.0->xformers) (3.2.1)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch==2.1.0->xformers) (3.1.2)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch==2.1.0->xformers) (2023.6.0)\n",
-            "Requirement already satisfied: triton==2.1.0 in /usr/local/lib/python3.10/dist-packages (from torch==2.1.0->xformers) (2.1.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch==2.1.0->xformers) (2.1.3)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch==2.1.0->xformers) (1.3.0)\n",
-            "Installing collected packages: xformers\n",
-            "Successfully installed xformers-0.0.22.post7\n"
           ]
         }
       ]
@@ -626,7 +625,7 @@
         "id": "0Dfo83z0IOVo",
         "outputId": "e67af569-f180-43d8-ac06-8d31dcbf24dd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,21 +719,26 @@
         "from diffusers import DiffusionPipeline, StableDiffusionXLImg2ImgPipeline\n",
         "import torch\n",
         "\n",
-        "model = \"stabilityai/stable-diffusion-xl-base-1.0\"\n",
+        "version = \"_v6\"\n",
+        "if not os.path.exists(os.path.join(OUTPUT, f\"raw{version}\")):\n",
+        "  os.mkdir(os.path.join(OUTPUT, f\"raw{version}\"))\n",
+        "if not os.path.exists(os.path.join(OUTPUT, f\"processed{version}\")):\n",
+        "  os.mkdir(os.path.join(OUTPUT, f\"processed{version}\"))\n",
+        "\n",
         "pipe = DiffusionPipeline.from_pretrained(\n",
-        "    model,\n",
+        "    MODEL,\n",
         "    torch_dtype=torch.float16\n",
         ")\n",
         "pipe.to(\"cuda\")\n",
-        "pipe.load_lora_weights(\"/content/midfluencer_v2/\", weight_name=\"pytorch_lora_weights.safetensors\")\n",
+        "pipe.load_lora_weights(os.path.join(OUTPUT, \"midfluencer\"+version), weight_name=\"pytorch_lora_weights.safetensors\")\n",
         "\n",
-        "prompt = \"photo of woman on the timesquare, photorealistic\"\n",
+        "prompt = \"create a photorealistic image of Laura on the timesquare\"\n",
         "\n",
         "for seed in range(10):\n",
         "    generator = torch.Generator(\"cuda\").manual_seed(seed)\n",
         "    image_pipe = pipe(prompt=prompt, generator=generator, num_inference_steps=25)\n",
         "    image = image_pipe.images[0]\n",
-        "    image.save(f\"/content/img_out/{seed}.png\")"
+        "    image.save(os.path.join(OUTPUT, f\"raw{version}\", f\"{seed}.png\"))"
       ],
       "metadata": {
         "id": "oyt4OpJfIwff",
@@ -828,6 +832,18 @@
     {
       "cell_type": "code",
       "source": [
+        "pipe.to(\"cpu\")\n",
+        "del pipe"
+      ],
+      "metadata": {
+        "id": "e4K10VqNQmws"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from PIL import Image\n",
         "import os\n",
         "\n",
@@ -837,16 +853,16 @@
         ")\n",
         "refiner.to(\"cuda\")\n",
         "\n",
-        "all_images = os.listdir(\"/content/img_out\")\n",
+        "all_images = os.listdir(os.path.join(OUTPUT, f\"raw{version}\"))\n",
         "for image_file in all_images:\n",
-        "  image = Image.open(os.path.join(\"/content/img_out/\", image_file))\n",
+        "  image = Image.open(os.path.join(os.path.join(OUTPUT, f\"raw{version}\"), image_file))\n",
         "\n",
-        "  image = refiner(prompt=prompt, generator=generator, image=image)\n",
+        "  image = refiner(prompt=\"make the sourronding look more realistic and like a normal human in this scenery\", generator=generator, image=image)\n",
         "  image = image.images[0]\n",
-        "  image.save(f\"/content/img_refined/refined_{image_file}\")"
+        "  image.save(os.path.join(OUTPUT, f\"processed{version}\", f\"refined_{image_file}\"))"
       ],
       "metadata": {
-        "id": "e4K10VqNQmws"
+        "id": "XFaWF46ixS7J"
       },
       "execution_count": null,
       "outputs": []
